--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,12 @@
-name: 'Secret Scanning Review'
-on: pull_request
+on: [push]
 
 jobs:
-  secret-scanning-review:
+  secret_scan:
     runs-on: ubuntu-latest
+    name: Find secrets
     steps:
-      - name: 'Secret Scanning Review Action'
-        uses: advanced-security/secret-scanning-review-action@v0
-        with:
-          token: ${{ secrets.SECRET_SCAN_REVIEW_GITHUB_TOKEN }}
-          fail-on-alert: true
-          fail-on-alert-exclude-closed: true
+    # Checkout the source code so we have some files to look at.
+    - uses: actions/checkout@v2
+    # Run the secrets finder
+    - name: secrets finder
+      uses: govindarajanv/secrets-finder@v2.6
