--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,32 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+			        <groupId>org.cyclonedx</groupId>
+			        <artifactId>cyclonedx-maven-plugin</artifactId>
+			        <version>2.5.2</version>
+			        <executions>
+			            <execution>
+			                <phase>package</phase>
+			                <goals>
+			                    <goal>makeAggregateBom</goal>
+			                </goals>
+			            </execution>
+			        </executions>
+			        <configuration>
+			            <projectType>library</projectType>
+			            <schemaVersion>1.3</schemaVersion>
+			            <includeBomSerialNumber>true</includeBomSerialNumber>
+			            <includeCompileScope>true</includeCompileScope>
+			            <includeProvidedScope>true</includeProvidedScope>
+			            <includeRuntimeScope>true</includeRuntimeScope>
+			            <includeSystemScope>true</includeSystemScope>
+			            <includeTestScope>false</includeTestScope>
+			            <includeLicenseText>false</includeLicenseText>
+			            <outputFormat>all</outputFormat>
+			            <outputName>bom</outputName>
+			        </configuration>
+			    </plugin>
 		</plugins>
 	</build>
 
