--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,8 @@ jobs:
     steps:
       - name: Checkout
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
+          distribution: 'zulu' 
           java-version: '17'      
       - name: Build project with Maven
         run: mvn clean install
